--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
         <title>Palloma Gualter</title>
     </head>
     <body>
-        Hello, Palloma Gualter!
+        <header>
+            <h1>Palloma Gualter</h1>
+        </header>
+        <section>
+            <header>
+                <h2>Posts</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                </header>
+            </article>
+        </section>
+        <footer></footer>
     </body>
 </html>
