tags li, ul e ol

--- a/index.html
+++ b/index.html
@@ -19,11 +19,23 @@
                     <img src="html-code.png" alt="Editor de texto contendo código html">
                 </header>
                 <p>
-                    <a href="https://lipsum.com/" target="_black">Lorem Ipsum</a> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <a href="https://lipsum.com/" target="_blank">Lorem Ipsum</a> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                 </p>
-                <p>Sugestão acesse <a href="https://tinypng.com/" target="_blanck">tinypng</a> e jogue suas imagens antes de colocar em seu site. Ajuda a remover dados desnecessários das imagens.</p>
+                <p>Sugestão acesse <a href="https://tinypng.com/" target="_blank">tinypng</a> e jogue suas imagens antes de colocar em seu site. Ajuda a remover dados desnecessários das imagens.</p>
             </article>
         </section>
-        <footer>Made by <a href="mailto:pallomagualter21@gmail.com">Palloma Gualter</a></footer>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto:pallomagualter21@gmail.com">pallomagualter21@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/palloma-gualter-983b7338/" target="_blank">LinkedIn Profile</a>
+                </li>
+                <li>
+                    <a href="https://github.com/pallomagualter" target="_blank">Github Profile</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
