estilizando textos e listas

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </article>
         </section>
         <footer>
-            <ol>
+            <ul class="contacts_list">
                 <li>
                     <a href="mailto:pallomagualter21@gmail.com">pallomagualter21@gmail.com</a>
                 </li>
@@ -36,7 +36,7 @@
                 <li>
                     <a href="https://github.com/pallomagualter" target="_blank">Github Profile</a>
                 </li>
-            </ol>
+            </ul>
         </footer>
     </body>
 </html>
